# rustulator

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
auxiliary/: Cargo.toml
auxiliary/src/: button.rs  led.rs  lib.rs
src/: main.rs  panicbit.rs
src/panicbit/: allocator.rs  gpio.rs  keypad.rs  lcd.rs  macros.rs  peripherals.rs
src/panicbit/gpio/: macros.rs
