[package]
name = "foo"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = ">=0.5.8,<0.7"
cortex-m-rt = "0.6.8"
embedded-hal = "0.2.3"
nb = "0.1.2"
stm32f3 = "0.9.0"
panic-semihosting = "0.5.3"
stm32f3xx-hal = { version = "0.4.0", features = ["stm32f303xc", "rt"] }
usb-device = "0.2.3"
usbd-serial = "0.1.0"

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.void]
default-features = false
version = "1.0.2"
