[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "aux5"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.6"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.3"
stm32f3xx-hal = { version = "0.3.0", features = ["stm32f303", "rt"] }

# [dependencies.f3]
# features = ["rt"]
# version = "0.6.1"
